fix: image Blackwell + transport MCP SSE
- Image vLLM: vllm/vllm-openai:latest → lmcache/vllm-openai:build-latest
  (compatible RTX Pro 5000 Blackwell, CUDA 13.0)
- MCP server: transport Stdio → SSE (Express HTTP sur port 3100)
  pour communication inter-containers Docker
- Model name: Qwen/Qwen3-14B-AWQ → qwen3 (match --served-model-name)
- Ajout dépendances express + @types/express

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   vllm:
-    image: vllm/vllm-openai:latest
+    image: lmcache/vllm-openai:build-latest
     container_name: wiame-vllm
     ports:
       - "8000:8000"
