--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
+    "express": "^4.21.0",
     "openai": "^4.80.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.0.0",
     "tsx": "^4.19.0",
     "typescript": "^5.7.0"
