--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     command: >
       --model Qwen/Qwen3-14B-AWQ
       --served-model-name qwen3
-      --quantization awq
+      --quantization awq_marlin
       --max-model-len 32768
       --gpu-memory-utilization 0.80
       --host 0.0.0.0
@@ -29,8 +29,8 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 120s
+      retries: 20
+      start_period: 600s
     networks:
       - wiame-net
 
